# mlge

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  GenGraphViz.bat  GenVS2022Projects.bat  LICENSE  README.md  TODO.md
CMake/: presetup.cmake  utils.cmake
ScratchpadGame/: CMakeLists.txt
ScratchpadGame/Assets/: ScratchpadGame.assets.json
ScratchpadGame/Config/: ScratchpadGame.ini
ScratchpadGame/Src/: PlayerShip.cpp  PlayerShip.h  ScratchpadGame.cpp  ScratchpadGame.h  ScratchpadGamePch.h  Stats.cpp  Stats.h  mlgeScratchpad.h
czcore/: CMakeLists.txt
czcore/UnitTests/: CMakeLists.txt  CoreUnitTests.cpp  CoreUnitTestsPch.h  FNVHashTests.cpp  SharedPtrTests.cpp  TestUtils.h  Win32EventTests.cpp
czcore/source/: CMakeLists.txt
czcore/source/crazygaze/core/: Algorithm.h  AsyncCommandQueue.cpp  AsyncCommandQueue.h  CommandLine.cpp  CommandLine.h  Common.h  CorePch.h  CorePreSetup.h  FNVHash.h  File.cpp  File.h  IniFile.cpp  IniFile.h  LogOutputs.cpp  LogOutputs.h  Logging.cpp  Logging.h  Misc.h  PlatformUtils.cpp  PlatformUtils.h  ScopeGuard.h  Semaphore.cpp  Semaphore.h  SharedPtr.h  SharedQueue.h  Singleton.h  StringUtils.cpp  StringUtils.h
czcore/source/crazygaze/core/Windows/: Win32Event.cpp  Win32Event.h
mlge/: CMakeLists.txt
mlge/Assets/: mlge.assets.json
mlge/Config/: mlge.ini
mlge/mlge/: Actor.cpp  Actor.h  ActorComponent.h  Common.h  Config.cpp  Config.h  Delegates.cpp  Delegates.h  Engine.cpp  Engine.h  FlipbookComponent.cpp  FlipbookComponent.h  Game.cpp  Game.h  GameClock.h  GlobalConstructorsTouch.cpp  Level.cpp  Level.h  MLGEMain.cpp  MLGEPch.h  Math.cpp  Math.h  Object.cpp  Object.h  ObjectPtr.cpp  ObjectPtr.h  Paths.cpp  Paths.h  PerformanceStats.cpp  PerformanceStats.h  PreSetup.h  Profiler.cpp  Profiler.h  RenderComponent.cpp  RenderComponent.h  Root.cpp  Root.h  Text.cpp  Text.h  TextureComponent.cpp  (+2 more)
mlge/mlge/Editor/: AssetBrowser.cpp  AssetBrowser.h  Console.cpp  Console.h  Editor.cpp  Editor.h  GameControlBar.cpp  GameControlBar.h  GameWindow.cpp  GameWindow.h  ImGuiLayer.cpp  ImGuiLayer.h  ResourceWindow.cpp  ResourceWindow.h  Window.cpp  Window.h
mlge/mlge/Experimental/: DebugText.cpp  DebugText.h
mlge/mlge/Misc/: ContainerUtils.h  LinkedList.h
mlge/mlge/Render/: DXDebugLayer.cpp  DXDebugLayer.h  DebugUtils.cpp  DebugUtils.h  RenderQueue.cpp  RenderQueue.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h
mlge/mlge/Resource/: Flipbook.cpp  Flipbook.h  Image.cpp  Image.h  Resource.cpp  Resource.h  SpriteSheet.cpp  SpriteSheet.h  TTFFont.cpp  TTFFont.h  Texture.cpp  Texture.h
mlge/mlge/UI/: Label.cpp  Label.h  UIButton.cpp  UIButton.h  UIEvent.h  UILabel.cpp  UILabel.h  UIScene.cpp  UIScene.h  UIStyle.cpp  UIStyle.h  UIWidget.cpp  UIWidget.h  Widget.cpp  Widget.h
mlgeSample/: CMakeLists.txt
mlgeSample/Assets/: mlgeSample.assets.json
mlgeSample/Assets/Ships/PSD/: Bomber_Spritelist.psd  Corvette_Spritelist.psd  Fighter_Spritelist.psd
mlgeSample/Config/: mlgeSample.ini
mlgeSample/Src/: mlgeSample.cpp  mlgeSample.h  mlgeSamplePch.h
mlgegen/: CMakeLists.txt  Context.h  mlgegen.cpp  mlgegenPch.h  mlgegen_custom.h
mlgegen/mlgegen_custom/: CMakeLists.txt  mlgegen_custom.cpp  mlgegen_custom_Pch.h
